--- a/auth/package.json
+++ b/auth/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@faramin/home",
+  "name": "@faramin/auth",
   "scripts": {
-    "start": "webpack serve --port 9002",
+    "start": "webpack serve --port 9100",
     "start:standalone": "webpack serve --env standalone",
     "build": "webpack --mode=production",
     "analyze": "webpack --mode=production --env analyze",
     "lint": "eslint src --ext js",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
-    "test": "cross-env BABEL_ENV=test jest",
+    "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
     "watch-tests": "cross-env BABEL_ENV=test jest --watch",
     "coverage": "cross-env BABEL_ENV=test jest --coverage"
   },
@@ -22,16 +22,13 @@
     "@babel/eslint-parser": "^7.12.16",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
     "@babel/runtime": "^7.12.5",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
     "babel-jest": "^26.6.3",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
-    "eslint-config-react-important-stuff": "^3.0.0",
+    "eslint-config-important-stuff": "^1.1.0",
     "eslint-plugin-prettier": "^3.2.0",
     "husky": "^4.3.5",
     "identity-obj-proxy": "^3.0.0",
@@ -39,12 +36,14 @@
     "jest-cli": "^26.6.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
-    "single-spa-react": "^4.0.0",
     "webpack": "^5.8.0",
+    "webpack-config-single-spa": "^2.0.0",
+    "webpack-merge": "^5.4.0",
     "webpack-cli": "^4.2.0",
-    "webpack-config-single-spa-react": "^2.0.0",
-    "webpack-dev-server": "^4.0.0-beta.0",
-    "webpack-merge": "^5.4.0"
+    "webpack-dev-server": "^4.0.0-beta.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/jest": "^26.0.16",
+    "@types/systemjs": "^6.1.0"
+  }
 }
