--- a/dashboard-app/package.json
+++ b/dashboard-app/package.json
@@ -46,8 +46,5 @@
     "webpack-dev-server": "^4.0.0-beta.0",
     "webpack-merge": "^5.4.0"
   },
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  }
+  "dependencies": {}
 }
