--- a/styleguide/package.json
+++ b/styleguide/package.json
@@ -44,10 +44,6 @@
     "webpack-merge": "^5.4.0"
   },
   "dependencies": {
-    "@types/jest": "^26.0.16",
-    "@types/systemjs": "^6.1.0",
-    "antd": "^4.16.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@material-ui/core": "^4.11.4"
   }
 }
